--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-readme": "node ./node_modules/booklisp/index.js ./js-programming-vocab-list/readme.md README.md"
+    "build-vocab": "node ./node_modules/booklisp/index.js ./js-programming-vocab-list/readme.md programming-vocab.md"
   },
   "repository": {
     "type": "git",
