--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "js-programming-vocab-list",
   "version": "1.0.0",
-  "description": "A vocabulary list for people learning programming with Javascript",
+  "description": "A vocabulary list for people learning programming with JavaScript",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,7 +14,7 @@
     "url": "git+https://github.com/cmstead/js-programming-vocab-list.git"
   },
   "author": "Chris Stead",
-  "license": "MPL-2.0",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/cmstead/js-programming-vocab-list/issues"
   },
